kustomize/base/esv-shim/esv-shim-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esv-shim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esv-shim
  template:
    metadata:
      labels:
        app: esv-shim
    spec:
      serviceAccountName: esv-shim
      containers:
        - name: esv-shim
          image: esv-shim
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
