kustomize/base/esv-shim/esv-shim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esv-shim
spec:
  selector:
    app: esv-shim
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
