kustomize/base/esv-shim/esv-shim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esv-shim
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "identity-platform.domain.local"
      secretName: "platform-tls"
  rules:
    - host: "identity-platform.domain.local"
      http:
        paths:
          - path: /environment
            pathType: Prefix
            backend:
              service:
                name: esv-shim
                port:
                  number: 8080
